<resources>
    <string name="app_name">ReachForHelp</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_help">Help</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="title_activity_main">ReachForHelp</string>

    <string name="back">Back</string>
    <string name="family_friends">Family/Friends</string>
    <string name="fullname_ff">Fullname</string>
    <string name="phone_ff">Phone</string>
    <string name="email_family_friends">Email</string>
    <string name="relationship">Relationship</string>
    <string name="facebook_profile">Facebook Profile</string>
    <string name="twitter_handel">Twitter handel</string>
    <string name="add">Add</string>
    <string name="image">image</string>

    <string name="human_right_doc">
    \n\n 1.1 Lorem ipsum dolor sit amet,consectetur
    \nadipiscing elit.
    Suspendisse commodo dolor justo,
    rhoncus aliquet mauris auctor vel.
    Phasellus finibus auctor sem,
    sit amet porta arcu egestas non.
    Nulla nisl vitae dolor auctor tincidunt sit amet ac dolor.
    Quisque pulvinar nibh a lacus euismod.
    \n\n1.2  Lorem ipsum dolor sit amet, consectetur
    \nadipiscing elit. Suspendisse commodo dolor justo rhoncus
    aliquet mauris auctor vel. Phasellus finibus auctor sem,
    sit amet porta arcu egestas non.
    Nulla nisl vitae dolor auctor tincidunt sit amet ac dolor.
    Quisque pulvinar nibh a lacus euismod pulvinar. Nullam interdum purus nisi.
    Donec consectetur consequat porta. Fusce ante felis, tincidunt nec isus sed,
    porttitor pretium erat. Etiam eu hendreritdolor.
    </string>
    <string name="safety_guide_info">
         \n\n 1.1 Lorem ipsum dolor sit amet,consectetur
    \nadipiscing elit.
    Suspendisse commodo dolor justo,
    rhoncus aliquet mauris auctor vel.
    Phasellus finibus auctor sem,
    sit amet porta arcu egestas non.
    Nulla nisl vitae dolor auctor tincidunt sit amet ac dolor.
    Quisque pulvinar nibh a lacus euismod.
    \n\n1.2  Lorem ipsum dolor sit amet, consectetur
    \nadipiscing elit. Suspendisse commodo dolor justo rhoncus
    aliquet mauris auctor vel. Phasellus finibus auctor sem,
    sit amet porta arcu egestas non.
    Nulla nisl vitae dolor auctor tincidunt sit amet ac dolor.
    Quisque pulvinar nibh a lacus euismod pulvinar. Nullam interdum purus nisi.
    Donec consectetur consequat porta. Fusce ante felis, tincidunt nec isus sed,
    porttitor pretium erat. Etiam eu hendreritdolor.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
