<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.ui.frnds_family.Frnds_FamilyFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_fullname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_big_margin"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/standard_big_margin"
        android:hint="@string/fullname_ff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/phone_ff"
        app:layout_constraintEnd_toEndOf="@+id/textInput_fullname"
        app:layout_constraintStart_toStartOf="@+id/textInput_fullname"
        app:layout_constraintTop_toBottomOf="@+id/textInput_fullname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_email_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email_family_friends"
        app:layout_constraintEnd_toEndOf="@+id/textInput_phone_number"
        app:layout_constraintStart_toStartOf="@+id/textInput_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/textInput_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_relationSh"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/relationship"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="@+id/textInput_email_address"
        app:layout_constraintStart_toStartOf="@+id/textInput_email_address"
        app:layout_constraintTop_toBottomOf="@+id/textInput_email_address">

        <AutoCompleteTextView
            android:id="@+id/autoText_relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint=""
            app:boxStrokeWidth="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_facebook"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/facebook_profile"
        app:layout_constraintEnd_toEndOf="@+id/textInput_relationSh"
        app:layout_constraintStart_toStartOf="@+id/textInput_relationSh"
        app:layout_constraintTop_toBottomOf="@+id/textInput_relationSh">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_twitter"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/twitter_handel"
        app:layout_constraintEnd_toEndOf="@+id/textInput_facebook"
        app:layout_constraintStart_toStartOf="@+id/textInput_facebook"
        app:layout_constraintTop_toBottomOf="@+id/textInput_facebook">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_family"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="120dp"
        android:text="@string/add"
        android:padding="20dp"
        android:backgroundTint="@color/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_twitter" />

</androidx.constraintlayout.widget.ConstraintLayout>